syntax = "proto3";

package pbandk.testpb;

import "google/protobuf/descriptor.proto";

extend google.protobuf.FieldOptions {
  int32 non_optional_int32 = 50000;
  optional int32 optional_int32 = 50001;
}